fix code to fit all criterias